[gd_scene load_steps=4 format=3 uid="uid://ccv0fblifexvy"]

[ext_resource type="Script" path="res://Control.gd" id="1_4y416"]

[sub_resource type="InputEventKey" id="InputEventKey_pb4ao"]
ctrl_pressed = true
keycode = 46

[sub_resource type="Shortcut" id="Shortcut_gil6u"]
events = [SubResource("InputEventKey_pb4ao")]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4y416")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
shortcut = SubResource("Shortcut_gil6u")
text = "sdafsdfadsf"

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 372.0
offset_top = 248.0
offset_right = 416.0
offset_bottom = 272.0
text = "asdfasdfasdfas"

[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="Button" to="." method="_on_button_toggled"]
